--- a/ch04/02.html
+++ b/ch04/02.html
@@ -45,6 +45,7 @@
                         <span>麦克风示例</span>
                     </h1>
                     <audio ref="audio" controls autoplay></audio>
+                    <p>警告：如果没有使用头戴式耳机，声音会反馈到扬声器</p>
                 </div>
            `
         })
