default value for filter

--- a/ch04/05.html
+++ b/ch04/05.html
@@ -63,7 +63,7 @@
                     </h1>
                     <video :class="filterEffect" ref="video" autoplay playsInline></video>
                     <div>
-                        <select value="none" style="width:100px" v-model="filterEffect" >
+                        <select style="width:100px" v-model="filterEffect" >
                             <option value="none">没有滤镜</option>
                             <option value="blur">模糊</option>
                             <option value="grayscale">灰度</option>
